main/default/objects/Journey_Participant__c/Journey_Participant__c.object-meta.xml
<CustomObject>
    <label>Journey Participant</label>
    <nameField>
        <displayFormat>JP-{00000}</displayFormat>
        <label>Participant Journey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journey Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>