main/default/objects/Journey_Participant__c/fields/Completed_Checkpoints__c.field-meta.xml
<CustomField>
    <fullName>Completed_Checkpoints__c</fullName>
    <description>Total number of completed checkpoints</description>
    <label>Completed Checkpoints</label>
    <summaryFilterItems>
        <field>Participant_Milestone__c.Type__c</field>
        <operation>equals</operation>
        <value>Checkpoint</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Participant_Milestone__c.Progress__c</field>
        <operation>equals</operation>
        <value>100</value>
    </summaryFilterItems>
    <summaryForeignKey>Participant_Milestone__c.Journey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>