main/default/objects/Journey_Participant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Journey Participants</relationshipLabel>
    <relationshipName>Journey_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>