main/default/objects/Journey_Participant__c/fields/Engagement_Level__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Level__c</fullName>
    <description>Engagement Level</description>
    <label>Engagement Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unaware</fullName>
            </value>
            <value>
                <fullName>Resistant</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Supportive</fullName>
            </value>
            <value>
                <fullName>Leading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>