main/default/objects/Journey_Participant__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <label>Journey</label>
    <referenceTo>Journey__c</referenceTo>
    <relationshipLabel>Journey Participants</relationshipLabel>
    <relationshipName>Journey_Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>