main/default/objects/Journey_Participant__c/fields/Journey_Progress__c.field-meta.xml
<CustomField>
    <fullName>Journey_Progress__c</fullName>
    <description>Indicates Journey participant progress.</description>
    <formula>( Milestone_Progress_Total__c /  Total_Milestones__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>