main/default/objects/Journey_Participant__c/fields/Journey_Target_Progress__c.field-meta.xml
<CustomField>
    <fullName>Journey_Target_Progress__c</fullName>
    <description>Journey target progress reference</description>
    <formula>(  Started_Participant_Milestones__c / Total_Milestones__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journey Milestone Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>