main/default/objects/Journey_Participant__c/fields/Journey_URL__c.field-meta.xml
<CustomField>
    <fullName>Journey_URL__c</fullName>
    <description>Journey URL</description>
    <label>Journey URL</label>
    <type>Url</type>
</CustomField>