main/default/objects/Journey_Participant__c/fields/Milestone_Progress_Total__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Progress_Total__c</fullName>
    <description>All milestones progress summary</description>
    <label>Milestone Progress Total</label>
    <summarizedField>Participant_Milestone__c.Milestone_Progress__c</summarizedField>
    <summaryFilterItems>
        <field>Participant_Milestone__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Participant_Milestone__c.Checkpoint__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Participant_Milestone__c.Child_Milestone__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Participant_Milestone__c.Journey__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>