main/default/objects/Journey_Participant__c/fields/Started_Participant_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Started_Participant_Milestones__c</fullName>
    <description>Counts all the Started Participant Milestones</description>
    <label>Started Participant Milestones</label>
    <summaryFilterItems>
        <field>Participant_Milestone__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Participant_Milestone__c.Checkpoint__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Participant_Milestone__c.Child_Milestone__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Participant_Milestone__c.Milestone_Started__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Participant_Milestone__c.Journey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>