main/default/objects/Journey_Participant__c/fields/Total_Checkpoints__c.field-meta.xml
<CustomField>
    <fullName>Total_Checkpoints__c</fullName>
    <description>Participants Total Number of Checkpoints</description>
    <label>Total Checkpoints</label>
    <summaryFilterItems>
        <field>Participant_Milestone__c.Type__c</field>
        <operation>equals</operation>
        <value>Checkpoint</value>
    </summaryFilterItems>
    <summaryForeignKey>Participant_Milestone__c.Journey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>